--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  border: 1px solid #eee;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 1px solid #eee;
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 0.2);
+}
