--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,8 @@ code {
   border-radius: 8px;
   background: rgba(0, 0, 0, 0.2);
 }
+
+a:-webkit-any-link {
+  color: inherit;
+  text-decoration: none;
+}
